src/objects/Apttus_Config2__ApplicationFeature__c.object
<CustomObject>
    <description>An object to contain features in the Applications, where Applications are Apttus products like CPQ, CLM etc.</description>
    <fields>
        <fullName>Apttus_Config2__ApplicationName__c</fullName>
        <description>Name of the application</description>
        <inlineHelpText>Name of the application</inlineHelpText>
        <label>Application Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPQ</fullName>
                    <default>true</default>
                    <label>CPQ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultId__c</fullName>
        <description>Default Identifier of the Application Feature</description>
        <inlineHelpText>Default Identifier of the Application Feature</inlineHelpText>
        <label>DefaultId</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExternalId__c</fullName>
        <description>External Id pointing to the original ApplicationFeature__c record</description>
        <inlineHelpText>External Id pointing to the original ApplicationFeature__c record</inlineHelpText>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FeatureName__c</fullName>
        <description>Name of the feature</description>
        <inlineHelpText>Name of the feature</inlineHelpText>
        <label>Feature Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Settings</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Cart Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Sequence of application feature</description>
        <inlineHelpText>Sequence of application feature</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Feature</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>